# tx-village

./: .envrc  .gitignore  .typos.toml  Cargo.toml  README.md  build.nix  flake.nix  github-pages.nix  hercules-ci.nix  pkgs.nix  pre-commit.nix  rust-workspace.nix  settings.nix
artifacts/tx-bakery/: crates.js  help.html  search-index.js  settings.html  src-files.js
artifacts/tx-bakery-ogmios/: crates.js  help.html  search-index.js  settings.html  src-files.js
artifacts/tx-bakery-ogmios/tx_bakery_ogmios/: all.html  index.html  sidebar-items.js
artifacts/tx-bakery-plutip/: crates.js  help.html  search-index.js  settings.html  src-files.js
artifacts/tx-bakery-plutip/tx_bakery_plutip/: all.html  enum.PlutipConfigBuilderError.html  enum.PlutipError.html  index.html  struct.Plutip.html  struct.PlutipConfig.html  struct.PlutipConfigBuilder.html
artifacts/tx-bakery/tx_bakery/: all.html  enum.ChangeStrategy.html  enum.CollateralStrategy.html  index.html  sidebar-items.js  struct.TxBakery.html  struct.TxWithCtx.html
artifacts/tx-indexer/: crates.js  help.html  search-index.js  settings.html  src-files.js
artifacts/tx-indexer/tx_indexer/: all.html  enum.TxIndexer.html  index.html  (+2 more)
dev-net/: build.nix  cardano-dev-net.nix  test.nix
diesel-derive-pg/: Cargo.toml  build.nix
diesel-derive-pg/src/: lib.rs
diesel-derive-pg/tests/: main.rs
docs/: catalyst-13.md
extras/diesel-derive-pg/: .envrc  Cargo.toml  README.md  build.nix
extras/diesel-derive-pg/src/: lib.rs
extras/tx-bakery-testsuite/tests/: .envrc  .gitignore  Cargo.toml  build.nix  dev-environment.nix  process-compose.yaml  test.skey
extras/tx-bakery-testsuite/tests/tests/: main.rs
extras/tx-bakery-testsuite/validation/: .envrc  build.nix  tx-bakery-test-scripts.cabal
extras/tx-bakery-testsuite/validation/app/: Main.hs
extras/tx-bakery-testsuite/validation/app/Demo/Cli/: Compile.hs
extras/tx-bakery-testsuite/validation/src/Demo/: Mint.hs  RefInput.hs  Validation.hs  ValidationV2.hs
extras/tx-indexer-testsuite/: .envrc  .gitignore  Cargo.toml  README.md  build.nix  commands.nix  dev-environment.nix  process-compose.yaml
extras/tx-indexer-testsuite/src/: lib.rs  main.rs  schema.rs
extras/tx-indexer-testsuite/src/utxo_db/: handler.rs
extras/tx-indexer-testsuite/src/utxo_db/table/: utxos.rs
extras/tx-indexer-testsuite/tests/: e2e.rs  fixture.rs  plutus.rs
extras/tx-indexer-testsuite/tests/fixtures/: 1728048211549.json  1728048211565.json  1728048211570.json  1728048211572.json  1728048211575.json  1728048211581.json  1728048211586.json  1728048211588.json  1728048211591.json  1728048211594.json  1728048211601.json  1728048211607.json  1728048211610.json  1728048211612.json  1728048211615.json
ledger-sim/: .envrc  build.nix  fourmolu.yaml  ledger-sim.cabal
ledger-sim/src/Ledger/: Sim.hs
ledger-sim/src/Ledger/Sim/: Actions.hs  Submission.hs  Test.hs  Validation.hs
ledger-sim/src/Ledger/Sim/Types/: Config.hs  CostModel.hs  EvaluationResult.hs  LedgerConfig.hs  LedgerSim.hs  LedgerState.hs  Prices.hs  Script.hs  Slot.hs  State.hs  Submission.hs  TxInfo.hs
ledger-sim/src/Ledger/Sim/Types/LedgerSim/: LedgerConfig.hs  LedgerState.hs
ledger-sim/src/Ledger/Sim/Utils/: Fee.hs  Hashing.hs
ledger-sim/src/Ledger/Sim/Validation/: Local.hs  Normality.hs  Stateful.hs  Validator.hs
ledger-sim/test/: Spec.hs
src/: handler.rs  lib.rs  main.rs
src/database/: database.rs  errors.rs  mod.rs  types.rs
src/indexer/: callback.rs  config.rs  error.rs  filter.rs  indexer.rs  mod.rs  retry.rs  types.rs
tx-bakery/: .envrc  CHANGELOG.md  Cargo.toml  README.md  build.nix
tx-bakery-ogmios/: .envrc  CHANGELOG.md  Cargo.toml  build.nix
tx-bakery-ogmios/src/: api.rs  clap.rs  client.rs  error.rs  launcher.rs  lib.rs
tx-bakery-plutip/: .envrc  Cargo.toml  README.md  build.nix
tx-bakery-plutip/src/: lib.rs
tx-bakery/.config/: nextest.toml
tx-bakery/proptest-regressions/: csl.txt
tx-bakery/proptest-regressions/utils/: csl_adapter.txt
tx-bakery/src/: chain_query.rs  clap.rs  error.rs  lib.rs  metadata.rs  submitter.rs  time.rs  tx_info_builder.rs  utils.rs  wallet.rs
tx-bakery/src/utils/: csl_adapter.rs  csl_to_pla.rs  from_csl.rs  key_wallet.rs  mod.rs  ogmios.rs  pla_to_csl.rs  plutip.rs  script.rs  to_csl.rs
tx-bakery/src/utils/ogmios/: api.rs  client.rs  error.rs  launcher.rs  mod.rs
tx-bakery/tests/: csl.rs  main.rs
tx-database/: plutus.sql
tx-indexer/: .envrc  .gitignore  Cargo.toml  README.md  build.nix  commands.nix  diesel.toml  expanded.rs
tx-indexer/app-migrations/2024-09-05-102658_utxo-indexer/: down.sql
tx-indexer/db/: plutus.sql  sync_progress.sql  testdb.sql  tx-indexer.sql  utxo-indexer.sql
tx-indexer/diesel-derive/: Cargo.toml
tx-indexer/diesel-derive/src/: lib.rs
tx-indexer/diesel-derive/tests/: main.rs
tx-indexer/lib-migrations/00000000000001_plutus/: down.sql
tx-indexer/lib-migrations/00000000000002_sync_progress/: down.sql
tx-indexer/migrations/00000000000001_plutus/: down.sql  up.sql
tx-indexer/migrations/00000000000002_sync_progress/: up.sql
tx-indexer/migrations/2024-09-05-102658_utxo-indexer/: up.sql
tx-indexer/migrations/2024-09-12-155258_add_testdb/: down.sql  up.sql
tx-indexer/proptest-regressions/database/: plutus.txt
tx-indexer/schema/: tx_indexer.sql
tx-indexer/src/: aux.rs  config.rs  filter.rs  from_oura.rs  handler.rs  indexer.rs  lib.rs  main.rs  progress_tracker.rs  schema.rs
tx-indexer/src/database/: errors.rs  mod.rs  plutus.rs  sync_progress.rs  types.rs
tx-indexer/src/database/diesel/: sync_progress.rs
tx-indexer/src/database/sqlx/: mod.rs
tx-indexer/src/handler/: callback.rs  chain_event.rs  mod.rs  retry.rs
tx-indexer/src/handler/example/: dummy.rs  mod.rs  tx_db.rs
tx-indexer/src/indexer/: callback.rs  config.rs  error.rs  filter.rs  mod.rs  retry.rs  run.rs  types.rs
tx-indexer/src/tx_db/: error.rs  handler.rs
tx-indexer/src/tx_db/table/: transaction.rs  utxos.rs
tx-indexer/src/utxo_db/: error.rs  handler.rs  mod.rs
tx-indexer/src/utxo_db/table/: utxos.rs
tx-indexer/tests/: e2e.rs  plutus.rs
(+399 files in other folders)
