[package]
name = "infinity-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.4.0"
num-bigint = "0.4.4"
proptest = "1.3.1"
serde = "1.0.188"
serde_json = { version = "1.0.107", features = ["arbitrary_precision"] }
thiserror = "1.0.49"
cardano-serialization-lib = "11.4"
bigdecimal = "0.3"
num-traits = "0.2"
num-derive = "0.3"
# errors, config
anyhow = "1.0.68"
log = "0.4.17"
cbor_event = "2.4.0"
uplc = "0.0.29"
clap = { version = "4.3.10", features = ["derive"] }

[build-dependencies]
tokio = { version = "1.24.2", features = [ "full" ] }