cabal-version: 3.0
name:          ledger-sim
version:       0.1.0.0
maintainer:    info@mlabs.city
author:        mlabs-haskell
description:   Simple ledger simulator wrapper around plutus-ledger-api

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wunused-do-bind
    -Wpartial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wname-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists
    -Wredundant-constraints -Wmissing-export-lists
    -Wmissing-deriving-strategies -Wname-shadowing -Wunused-packages
    -fwrite-ide-info

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    DerivingStrategies
    LambdaCase
    PatternSynonyms
    ViewPatterns

  default-language:   GHC2021

library
  import:          common-language
  exposed-modules:
    Ledger.Sim
    Ledger.Sim.Types.Config
    Ledger.Sim.Types.Script

  hs-source-dirs:  src
  build-depends:
    , base
    , bytestring
    , containers
    , cryptonite
    , memory
    , plutus-ledger-api
    , plutus-tx
    , serialise
    , transformers

test-suite ledger-sim-test
  import:         common-language
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , containers
    , ledger-sim
    , plutus-ledger-api
    , plutus-tx
    , tasty
    , tasty-hunit
    , transformers

  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
