[package]
name = "tx-bakery-ogmios"
version = "0.1.0"
edition = "2021"

[dependencies]
tx-bakery = { version = "0.1.0", path = ".extras/tx-bakery-0.1.0" }
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1"
anyhow = { version = "1.0.79", features = ["backtrace"] }
thiserror = "1.0.57"
chrono = "0.4.35"
nix = { version = "0.28.0", features = ["signal"] }
data-encoding = "2.5.0"
derive_builder = "0.12.0"
plutus-ledger-api = { version = "0.2.1", features = ["lbf", "chrono"] }
serde = "1.0.195"
serde_json = "1.0.122"
reqwest = { version = "0.11.23", features = ["json"] }
jsonrpsee = { version = "0.22.2", features = ["ws-client", "macros"] }
num-bigint = "0.4.6"
cardano-serialization-lib = "11.5.0"
cbor_event = "2.4.0"
hex = "0.4.3"
url = "2.5.2"
clap = { version = "4.5.14", features = ["derive"], optional = true }

[features]
clap = ["dep:clap"]
