[package]
name = "tx-bakery-ogmios"
version = "2.0.0-beta.3"
edition = "2021"

[dependencies]
tx-bakery = { version = "2.0.0-beta.3", path = ".extras/tx-bakery-v2" }
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1"
anyhow = { version = "1.0.79", features = ["backtrace"] }
thiserror = "1.0.57"
chrono = "0.4.35"
nix = { version = "0.28.0", features = ["signal"] }
data-encoding = "2.5.0"
derive_builder = "0.12.0"
plutus-ledger-api = { version = "2.1.0", features = ["lbf", "chrono"] }
serde = "1.0.195"
serde_json = "1.0.122"
reqwest = { version = "0.11.23", features = ["json"] }
jsonrpsee = { version = "0.22.2", features = ["ws-client", "macros"] }
num-bigint = "0.4.6"
cbor_event = "2.4.0"
hex = "0.4.3"
url = "2.5.2"
clap = { version = "4.5.14", features = ["derive"], optional = true }
num = "0.4.3"

[features]
clap = ["dep:clap"]
