[package]
name = "tx-indexer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Cardano transaction indexer"
repository = "https://github.com/mlabs-haskell/tx-village"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel-derive-pg = { path = ".extras/diesel-derive-pg-v0", optional = true }
data-encoding = "2.4.0"
num-bigint = "0.4.4"
proptest = "1.3.1"
serde = "1.0.188"
serde_json = { version = "1.0.107", features = ["arbitrary_precision"] }
thiserror = "1.0.49"
bigdecimal = "0.3"
num-traits = "0.2"
num-derive = "0.3"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "chrono",
  "macros",
  "uuid",
  "json",
  "runtime-tokio",
  "tls-rustls",
], optional = true }
anyhow = "1.0.68"
log = "0.4.17"
cbor_event = "2.4.0"
uplc = "0.0.29"
clap = { version = "4.3.10", features = ["derive"] }
oura = { path = ".extras/oura-v1" }
pallas = "0.30.1"
async-trait = "0.1.74"
tokio = { version = "1.24.2", features = ["io-util", "rt-multi-thread"] }
tracing = "0.1"
strum = "0.24"
strum_macros = "0.24"
frunk = "0.4.2"
tx-bakery = { version = "2.0.0-beta.2", path = ".extras/tx-bakery-v2" }
plutus-ledger-api = { version = "2.1.0", features = ["chrono", "serde"] }
chrono = "0.4.38"
futures = "0.3.30"
diesel = { version = "2.2.4", features = [
  "postgres",
  "serde_json",
  "r2d2",
], optional = true }
itertools = "0.13.0"
serde_with = "3.10.0"
tokio-stream = { version = "0.1.16", features = ["fs"] }

[features]
default = ["diesel"]
sqlx = ["dep:sqlx"]
diesel = ["dep:diesel", "dep:diesel-derive-pg"]
