[package]
name = "tx-indexer"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Cardano transaction indexer"
repository = "https://github.com/mlabs-haskell/tx-village"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel-derive-pg = { path = ".extras/diesel-derive-pg-v0", version = "^1.0.0", optional = true }
data-encoding = "2.6.0"
num-bigint = "0.4.6"
proptest = "1.6.0"
serde = "1.0.217"
serde_json = { version = "1.0.135", features = ["arbitrary_precision"] }
thiserror = "1.0.69"
bigdecimal = "0.3"
num-traits = "0.2"
num-derive = "0.3"
sqlx = { version = "0.8.3", features = [
  "postgres",
  "chrono",
  "macros",
  "uuid",
  "json",
  "runtime-tokio",
  "tls-rustls",
], optional = true }
anyhow = "1.0.95"
log = "0.4.22"
cbor_event = "2.4.0"
uplc = "0.0.29"
clap = { version = "4.5.24", features = ["derive"] }
oura = { git = "https://github.com/szg251/oura", tag = "v1.9.2" }
pallas = "0.30.2"
async-trait = "0.1.85"
tokio = { version = "1.43.0", features = ["io-util", "rt-multi-thread"] }
tracing = "0.1"
strum = "0.24"
strum_macros = "0.24"
frunk = "0.4.3"
tx-bakery = { version = "2.0.0-beta.4", path = ".extras/tx-bakery-v2" }
plutus-ledger-api = { version = "^3.0.2", features = ["chrono", "serde"] }
chrono = "0.4.39"
futures = "0.3.31"
diesel = { version = "2.2.6", features = [
  "postgres",
  "serde_json",
  "r2d2",
], optional = true }
itertools = "0.13.0"
serde_with = "3.12.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }

[features]
default = ["diesel"]
sqlx = ["dep:sqlx"]
diesel = ["dep:diesel", "dep:diesel-derive-pg"]
