[package]
name = "diesel-derive-pg"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Derive ToSql and FromSql trait implementations for Postgres custom types"
repository = "https://github.com/mlabs-haskell/tx-village"

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = "2.0.95"

[dev-dependencies]
diesel = { version = "2.2.6", features = ["postgres"] }
