[package]
name = "tx-bakery-tests"
version = "0.1.0"
edition = "2021"

[dependencies]


[dev-dependencies]
proptest = "1.6.0"
serial_test = "3.2.0"
lbf-tx-bakery-tests-config-api = { path = ".extras/lbf-tx-bakery-tests-config-api-0.1.0" }
lbf-tx-bakery-tests-plutus-api = { path = ".extras/lbf-tx-bakery-tests-plutus-api-0.1.0" }
lbr-prelude = { version = "0.1.3", features = ["derive"] }
lbf-prelude = { path = ".extras/lbf-prelude-0.1.0" }
plutus-ledger-api = { version = "3.0.1", features = ["lbf", "chrono"] }
tx-bakery = { version = "2.0.0-beta.4", path = ".extras/tx-bakery-v2" }
tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4.39"
num-bigint = { version = "0.4.6", features = ["serde"] }
url = "2.5.4"
assertables = "7.0.1"
tx-bakery-ogmios = { version = "2.0.0-beta.4", path = ".extras/tx-bakery-ogmios-v2" }
